--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/turn.min.js"></script>
     <script src="js/script.js" defer></script>
     <link href="css/style.css" rel="stylesheet" >
+    <title>Shoes SNAP</title>
   </head>
 
   <body>
